crates/vexor-compiler/tests/golden/error/output/nth_oob.err
Error: evaluation error
   ╭─[ input:2:15 ]
   │
 2 │ export Circle(nth(9)([1, 2, 3]))
   │               ────────┬────────  
   │                       ╰────────── index out of bounds
───╯
